<resources>
    <string name="app_name">SHG</string>
    <string name="title_login">Log in</string>
    <string name="prompt_pin_text">Enter Your 4 digit Login Pin</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_forgot_pin">Forgot Your Login Pin ?</string>
    <string name="design_and_developed">Design And Developed By RNIT</string>
    <string name="dont_have_acc">Don\'t Have An Account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_registration">Proceed with your</string>
    <string name="registration">Registration</string>
    <string name="enter_your_mobile">Enter Your 10 digit Mobile No</string>
    <string name="action_generate_otp">Generate Otp</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="you_will_getotp">You Will Get The Otp</string>
    <string name="action_vrify_otp">Verify Otp</string>
    <string name="total_meetings_conducted">--Total Meetings Conducted In The Month--</string>
    <string name="enrollface">Enroll face for</string>
    <string name="OK">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="exitsfacemsg">This Face Template is Already Registered with</string>
    <string name="twins_conform_msg">Are you sure you want to take attendance of</string>
    <string name="dashboard">DashBoard</string>
    <string name="facenotregistered">This face template is not registered</string>
    <string name="enrollment">Enrollment</string>
    <string name="nav_header_title">Name </string>
    <string name="nav_header_desc">Navigation headerv</string>
    <string name="meeting">Meeting</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="no_of_meetings">No of Meetings</string>
    <string name="feedback">Feedback</string>
    <string name="training_edu"><![CDATA[Training & Education]]></string>
    <string name="start_meeting">Start Meeting</string>
    <string name="department_communication">Department Communication</string>
    <string name="distribution">Distribution</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_date">Loan Date</string>
    <string name="loan_id">Loan Id</string>
    <string name="group_loans">Group Loans:</string>
    <string name="repayment">Repayment</string>

    <string name="alert_other_is_sharing">You cannot start screen share while the other participant is sharing.</string>
    <string name="settings_custom_ui">Customized UI</string>
</resources>
