<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_dashboard_menu"
            android:title="@string/home" />
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard_menu"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/enrollment"
            android:icon="@drawable/ic_enrollment_menu"
            android:title="@string/enrollment" />

        <item

            android:id="@+id/meeting"
            android:icon="@drawable/ic_meeting_menu"
            android:title="@string/meeting" />
        <item

            android:id="@+id/tips"
            android:icon="@drawable/ic_meeting_menu"
            android:title="Tips" />
        <item

            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Settings" />
        <item
            android:id="@+id/change_password"
            android:icon="@drawable/ic_change_password_menu"
            android:title="@string/change_password" />

        <item

            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_menu"
            android:title="@string/logout" />

    </group>


</menu>