<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="37sp"
        android:gravity="center"
        android:text="@string/title_registration"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="37sp"
        android:textColor="#000"
        android:gravity="center"
        android:text="@string/registration"
        />

    <EditText
        android:id="@+id/user_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:maxLength="10"
        android:text="323322"
        android:gravity="center"
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:selectAllOnFocus="true"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="end"
            android:text="@string/you_will_getotp"
            />
        <TextView
            android:id="@+id/tv_mobile_for_otp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="middle"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            android:text="965852556"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_gravity="center|center_horizontal"
        >
        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="45 sec"
            android:textColor="@color/red"
            android:background="@drawable/button_otp_background"
            />

        <TextView android:id="@+id/tv_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:ellipsize="middle"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:text="Re-Send Otp"
            android:enabled="false"
            />
    </LinearLayout>

    <Button
        android:id="@+id/bt_verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/verify_otp_background"
        android:padding="8dp"
        android:text="@string/action_vrify_otp"
        android:textColor="@color/white"
        />
</LinearLayout>