<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".views.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/logo_background1"

    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:foregroundGravity="center"
        android:layout_centerInParent="true"
        android:src="@drawable/sgh_logo"
        />
</RelativeLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="37sp"
    android:textColor="#000"
    android:gravity="center"
    android:text="@string/title_login"
    />

        <ImageView
            android:id="@+id/iv_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_user"
            android:layout_marginTop="16dp"
            />

        <EditText
            android:id="@+id/user_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:gravity="center"
            android:textSize="15sp"
            android:hint="@string/prompt_pin_text"
            android:inputType="numberPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/forgot_pin"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_gravity="start"
            android:textSize="15sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:gravity="center"
            android:text="@string/action_forgot_pin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="32dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginBottom="32dp"
       android:gravity="center"
       >

       <TextView
           android:id="@+id/tv_dont_have_acc"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/dont_have_acc"
          />

       <TextView
           android:id="@+id/sign_up"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="17sp"
           android:layout_marginStart="8dp"
           android:text="@string/sign_up"
           android:textColor="@color/colorPrimary"
          />
   </LinearLayout>

   <include layout="@layout/layout_bottom_app_name"

       />
</androidx.constraintlayout.widget.ConstraintLayout>