<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <Button android:id="@+id/bt_distribution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/distribution"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:background="@drawable/group_loan_distribution_bg"
        tools:ignore="ButtonStyle" />
    <Button android:id="@+id/bt_repayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/repayment"
        android:textColor="@color/colorGrey"
        android:layout_margin="8dp"
        android:background="@drawable/views_background"
        tools:ignore="ButtonStyle" />

</LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp"
        app:cardElevation="8dp"
        android:layout_margin="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                >
            <View
                android:layout_width="4dp"
                android:layout_height="24dp"
                android:background="@color/colorPrimary"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/group_loans"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:layout_marginStart="16dp"
                />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/loan_id"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:gravity="center"
                    />
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_meeting_date"
                    android:layout_marginStart="8dp"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/loan_date"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:gravity="center"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/loan_amount"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
            <LinearLayout android:id="@+id/ll_savings_adapter"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_loan_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/loan_id"
                    android:layout_weight="1"
                    android:textColor="@color/sky_blue"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:gravity="start|center"
                    android:layout_marginStart="16dp"
                    />
                <ImageView
                    android:id="@+id/iv_date"
                    android:layout_width="24dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_meeting_date"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/tv_loan_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/loan_date"
                    android:layout_weight=".8"
                    android:gravity="start|center"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:ellipsize="end"
                    />
                <TextView
                    android:id="@+id/tv_loan_amount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/loan_amount"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_marginStart="4dp"
                    />
                <TextView
                    android:id="@+id/tv_distribution"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/distribution"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/color_light_grey"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_member_savings_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>